--- a/.travis.yml
+++ b/.travis.yml
@@ -15,46 +15,59 @@ matrix:
     - php: 5.6
       env:
         - DEPS=lowest
+        - MEMCACHE_PECL_VERSION="memcache-3.0.8"
     - php: 5.6
       env:
         - DEPS=latest
+        - MEMCACHE_PECL_VERSION="memcache-3.0.8"
     - php: 7.0
       env:
         - DEPS=lowest
+        - MEMCACHE_PECL_VERSION="memcache-4.0.5.2"
     - php: 7.0
       env:
         - DEPS=latest
+        - MEMCACHE_PECL_VERSION="memcache-4.0.5.2"
     - php: 7.1
       env:
         - DEPS=lowest
+        - MEMCACHE_PECL_VERSION="memcache-4.0.5.2"
     - php: 7.1
       env:
         - DEPS=latest
+        - MEMCACHE_PECL_VERSION="memcache-4.0.5.2"
     - php: 7.2
       env:
         - DEPS=lowest
+        - MEMCACHE_PECL_VERSION="memcache-4.0.5.2"
     - php: 7.2
       env:
         - DEPS=latest
+        - MEMCACHE_PECL_VERSION="memcache-4.0.5.2"
     - php: 7.3
       env:
         - DEPS=lowest
+        - MEMCACHE_PECL_VERSION="memcache-4.0.5.2"
     - php: 7.3
       env:
         - DEPS=latest
+        - MEMCACHE_PECL_VERSION="memcache-4.0.5.2"
     - php: 7.4
       env:
         - DEPS=lowest
+        - MEMCACHE_PECL_VERSION="memcache-4.0.5.2"
     - php: 7.4
       env:
         - DEPS=latest
         - CS_CHECK=true
         - TEST_COVERAGE=true
+        - MEMCACHE_PECL_VERSION="memcache-4.0.5.2"
 
 before_install:
   - if [[ $TEST_COVERAGE != 'true' ]]; then phpenv config-rm xdebug.ini || return 0 ; fi
 
 install:
+  - yes|CFLAGS="-fgnu89-inline" pecl install -f $MEMCACHE_PECL_VERSION
   - travis_retry composer install $COMPOSER_ARGS --ignore-platform-reqs
   - if [[ $DEPS == 'latest' ]]; then travis_retry composer update $COMPOSER_ARGS ; fi
   - if [[ $DEPS == 'lowest' ]]; then travis_retry composer update --prefer-lowest --prefer-stable $COMPOSER_ARGS ; fi
