Add memcache config
Signed-off-by: Maximilian Bösing <2189546+boesing@users.noreply.github.com>

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,4 +14,8 @@
             <directory suffix=".php">./src</directory>
         </whitelist>
     </filter>
+    <php>
+        <env name="TESTS_LAMINAS_CACHE_MEMCACHE_HOST" value="127.0.0.1" />
+        <env name="TESTS_LAMINAS_CACHE_MEMCACHE_PORT" value="11211" />
+    </php>
 </phpunit>
