--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ cache:
   directories:
     - $HOME/.composer/cache
 
+services:
+  - memcached
+
 env:
   global:
     - COMPOSER_ARGS="--no-interaction"
