--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -6,7 +6,6 @@ on:
     branches:
       - '[0-9]+.[0-9]+.x'
       - 'refs/pull/*'
-    tags:
 
 jobs:
   matrix:
@@ -27,6 +26,7 @@ jobs:
       fail-fast: false
       matrix: ${{ fromJSON(needs.matrix.outputs.matrix) }}
     steps:
+      - uses: niden/actions-memcached@v7
       - name: ${{ matrix.name }}
         uses: laminas/laminas-continuous-integration-action@v1
         with:
