bugfix: use `memcached` hostname instead of localhost
Signed-off-by: Maximilian Bösing <2189546+boesing@users.noreply.github.com>

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -35,3 +35,5 @@ jobs:
         uses: laminas/laminas-continuous-integration-action@v1
         with:
           job: ${{ matrix.job }}
+        env:
+          TESTS_LAMINAS_CACHE_MEMCACHE_HOST: "memcached"
