--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "laminas/laminas-cache": "^2.10.1",
     "laminas/laminas-cache-storage-adapter-test": "^1.1.1",
     "laminas/laminas-coding-standard": "^2.1.4",
+    "laminas/laminas-serializer": "^2.10.1",
     "squizlabs/php_codesniffer": "^3.6.0"
   },
   "suggest": {
